[build-system]
requires = [
    "hatchling>=1.8.1",
    "jupyterlab~=3.0",
    "jupyter_core",
]
build-backend = "hatchling.build"

[project]
name = "voila"
description = "Voilà turns Jupyter notebooks into standalone web applications"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Voila Development Team" },
]
keywords = [
    "Jupyter",
    "JupyterLab",
    "Voila",
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "jupyter_client>=6.1.3,<8",
    "jupyter_core>=4.11.0",
    "jupyter_server>=1.18,<2.0.0",
    "jupyterlab_server>=2.3.0,<3",
    "nbclient>=0.4.0,<0.6",
    "nbconvert>=6.4.5,<7",
    "traitlets>=5.0.3,<6",
    "websockets>=9.0",
]
dynamic = [
    "version",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "black",
    "bump2version",
    "jupyter_releaser~=0.6",
]
test = [
    "ipywidgets",
    "matplotlib",
    "mock",
    "numpy",
    "pandas",
    "papermill",
    "pytest",
    "pytest-rerunfailures",
    "pytest-tornasync",
]

[project.scripts]
voila = "voila.app:main"

[project.urls]
Homepage = "https://github.com/voila-dashboards/voila"

[tool.hatch.version]
path = "voila/_version.py"
source = "code"

[tool.hatch.build]
artifacts = [
    "voila/labextension",
    "share/jupyter/voila/templates"
]

[tool.hatch.build.targets.wheel.shared-data]
"etc/jupyter" = "etc/jupyter"
"voila/static" = "share/jupyter/nbextensions/voila"
"voila/labextension" = "share/jupyter/labextensions/@voila-dashboards/jupyterlab-preview"
"install.json" = "share/jupyter/labextensions/@voila-dashboards/jupyterlab-preview/install.json"
"share/jupyter/voila/templates" = "share/jupyter/voila/templates"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.5.3",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "voila/labextension/static/style.js",
]
skip-if-exists = [
    "voila/labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "build"
npm = [
    "jlpm",
]
force = true

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = [
    "jlpm",
]

[tool.jupyter-releaser]
skip = [
    "check-links",
]

[tool.jupyter-releaser.hooks]
before-bump-version = [
    "python -m pip install bump2version jupyterlab~=3.0",
]
before-build-npm = [
    "python -m pip install jupyterlab~=3.0",
    "jlpm clean",
    "jlpm build:prod",
]
before-build-python = [
    "jlpm clean",
]
after-draft-release = "bash ./scripts/reset-stable.sh"

[tool.jupyter-releaser.options]
version-cmd = "python scripts/bump-version.py --force"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]

[tool.tbump.version]
current = "0.3.6"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\""

[[tool.tbump.file]]
src = "voila/_version.py"

[license]
file = "LICENSE"
