[flake8]
max-line-length=200

[metadata]
name = voila
version = attr: voila._version.__version__
description = Voilà turns Jupyter notebooks into standalone web applications
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Voila Development Team
url = https://github.com/voila-dashboards/voila
platforms = Linux, Mac OS X, Windows
keywords = Jupyter, JupyterLab, Voila
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    jupyter_server>=0.3.0,<2.0.0
    jupyter_client>=6.1.3,<8
    nbclient>=0.4.0,<0.6
    nbconvert>=6.0.0,<7
    websockets>=9.0

[options.extras_require]
dev =
    black
    bump2version
    jupyter_releaser~=0.6

test =
    ipywidgets
    mock
    matplotlib
    pandas
    pytest
    pytest-tornasync

fps =
    fps[uvicorn]
    fps-voila

[options.entry_points]
console_scripts =
    voila = voila.app:main
