[flake8]
max-line-length=200

[metadata]
name = voila
version = attr: voila._version.__version__
description = Voilà turns Jupyter notebooks into standalone web applications
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Voila Development Team
url = https://github.com/voila-dashboards/voila
platforms = Linux, Mac OS X, Windows
keywords = Jupyter, JupyterLab, Voila
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    jupyter_server>=0.3.0,<2.0.0
    jupyterlab_server>=2.3.0,<3
    jupyter_client>=6.1.3,<8
    nbclient>=0.4.0,<0.6
    nbconvert>=6.4.5,<7
    websockets>=9.0
    traitlets>=5.0.3,<6

[options.extras_require]
dev =
    black
    bump2version
    jupyter_releaser~=0.6

test =
    numpy
    pandas
    ipywidgets
    matplotlib
    mock
    pytest
    pytest-rerunfailures
    pytest-tornasync

visual_test =
    jupyterlab~=3.0
    bqplot
    scipy
    ipympl==0.8.7
    ipyvolume
    jupyterlab_miami_nights==0.3.2

[options.entry_points]
console_scripts =
    voila = voila.app:main
